Name:                howistart
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Custom
Cabal-version:       >=1.2
Data-files:          app.cfg
                     snaplets/heist/templates/*.tpl
                     snaplets/heist/templates/posts/elixir/1/*.tpl
                     snaplets/heist/templates/posts/erlang/1/*.tpl
                     snaplets/heist/templates/posts/go/1/*.tpl
                     snaplets/heist/templates/posts/ruby/1/*.tpl
                     static/css/*.css
                     static/css/*.min.css
                     static/fonts/*.eot
                     static/fonts/*.svg
                     static/fonts/*.ttf
                     static/fonts/*.woff
                     static/images/*.png
                     static/images/elixir/1/*.jpeg
                     static/images/elixir/1/*.png
                     static/images/erlang/1/*.gif
                     static/images/erlang/1/*.png
                     static/images/go/1/*.png
                     static/images/ruby/1/*.png
                     static/js/*.js
                     static/js/*.min.js
                     static/js/highlight.pack.js
                     static/js/jquery-1.10.2.js

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable howistart
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4.4     && < 5,
    lens                      >= 3.7.6   && < 4.5,
    bytestring                >= 0.9.1   && < 0.11,
    heist                     >= 0.13    && < 0.14,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    snap                      >= 0.13    && < 0.14,
    snap-core                 >= 0.9     && < 0.11,
    snap-server               >= 0.9     && < 0.11,
    snap-loader-static        >= 0.9     && < 0.10,
    text                      >= 1.1    && < 1.2,
    shelly                    >= 1.5.2,
    time                      >= 1.1     && < 1.5,
    configurator              >= 0.2.0.2 && < 0.3,
    xmlhtml                   >= 0.1,
    filemanip                 >= 0.3.6.2,
    yaml                      >= 0.8.7.2,
    pandoc                    >= 1.12.3.3,
    blaze-markup              == 0.6.0.0,
    blaze-builder             == 0.3.3.2,
    network                   >= 2.4.1.2,
    rss,
    directory

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w -Wall -Werror -fno-warn-type-defaults -fno-warn-unused-do-bind
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind -Werror -fno-warn-type-defaults -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -Werror -fno-warn-type-defaults -fno-warn-unused-do-bind
